<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
  /**
   * Run the migrations.
   */
  public function up(): void
  {
    Schema::create('proformas', function (Blueprint $table) {
      $table->id();

      $table->string('codigo')->unique();
      // TODO: implementar
      // $table->foreignId('cliente_id')->constrained()->onDelete('cascade');
      $table->timestamp('fecha_emision');
      $table->timestamp('fecha_vencimiento');
      $table->decimal('subtotal', 10, 2);
      $table->decimal('igv_tasa', 10, 2)->default(0.18);
      $table->decimal('igv_monto', 10, 2);
      $table->decimal('total', 10, 2);

      $table->timestamps();
    });
  }

  /**
   * Reverse the migrations.
   */
  public function down(): void
  {
    Schema::dropIfExists('proformas');
  }
};
