export interface Cliente {
  id: number;

  nombres: string;
  apellido_primario: string;
  apellido_secundario: string;
  ruc: string;
  dni: string;
  telefono: string;

  created_at: string;
  updated_at: string;
}
