<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
  /**
   * Run the migrations.
   */
  public function up(): void
  {
    Schema::create('proforma_items', function (Blueprint $table) {
      $table->id();

      $table->foreignId('proforma_id')->constrained()->cascadeOnDelete();
      $table->foreignId('product_id')->constrained()->cascadeOnDelete();
      $table->unsignedInteger('cantidad');
      $table->decimal('precio_unitario', 10, 2);
      $table->decimal('subtotal', 10, 2);

      $table->timestamps();
    });
  }

  /**
   * Reverse the migrations.
   */
  public function down(): void
  {
    Schema::dropIfExists('proforma_items');
  }
};
